Fixing Issue #3614
UI Frontend little bug, menu tabs covering title bar

--- a/include/themes/modern/main.css
+++ b/include/themes/modern/main.css
@@ -2028,7 +2028,6 @@ div.submenu span {
 .tabs {
 	border: 0px;
 	margin: 0px;
-	height: 25px;
 }
 
 .tabs a, .maintabs a {
